# emotion-analyze

./: README.md  pyproject.toml
src/laba_med/: webcam_analyze.py  webcam_reaction_plot.py
src/laba_med/entry_points/: main_plots.py  main_reactions.py
src/laba_med/players/: __init__.py  media_player.py  media_player_plots.py  media_player_reactions.py
src/laba_med/reactions/: draka.txt  draka_face_recogn.txt  monkey.txt  monkey_face_recogn.txt  slava.txt  slava_face_recogn.txt  ugosti-vodichkoj.txt  ugosti-vodichkoj_face_recogn.txt
